out/base/db-deployment.yaml
#! db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
    namespace: flask_web_app
    labels:
        com.docker.compose.project: flask_web_app
        com.docker.compose.service: db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: flask_web_app
            com.docker.compose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: flask_web_app
                com.docker.compose.service: db
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: db
                  image: postgres:12.18
                  imagePullPolicy: IfNotPresent
                  securityContext:
                    runAsUser: 999
                  livenessProbe:
                    exec:
                        command: [pg_isready]
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: db-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
                    - name: docker-entrypoint-initdb-d-weather-init-sh
                      mountPath: /docker-entrypoint-initdb.d/weather_init.sh
                    - name: docker-entrypoint-initdb-d-cc-init-sh
                      mountPath: /docker-entrypoint-initdb.d/cc_init.sh
                    - name: run-secrets-db-password
                      mountPath: /run/secrets/db-password
                      subPath: db-password
                      readOnly: true
            volumes:
                - name: run-secrets-db-password
                  secret:
                    secretName: db-password
                    items:
                        - key: db-password
                          path: db-password
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: db-db-data
                - name: docker-entrypoint-initdb-d-weather-init-sh
                  hostPath:
                    path: /Users/ycattaneo/Google Drive/My Drive/projects/flask_web_app/weather_init.sh
                - name: docker-entrypoint-initdb-d-cc-init-sh
                  hostPath:
                    path: /Users/ycattaneo/Google Drive/My Drive/projects/flask_web_app/cc_init.sh
