out/base/server-service.yaml
#! server-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: server-published
    namespace: flask_web_app
    labels:
        com.docker.compose.project: flask_web_app
        com.docker.compose.service: server
spec:
    selector:
        com.docker.compose.project: flask_web_app
        com.docker.compose.service: server
    ports:
        - name: server-8000
          port: 8000
          protocol: TCP
          targetPort: server-8000
